@@ -1,3 +1,11 @@
+2015-09-03  Richard Biener  <rguenther@suse.de>
+
+	PR ipa/66705
+	* tree-ssa-structalias.c (ctor_for_analysis): New function.
+	(create_variable_info_for_1): Use ctor_for_analysis instead
+	of get_constructor.
+	(create_variable_info_for): Likewise.
+
 2015-09-02  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
